Version 0.6.1
- Adds PGPKey.keyID property
- Build dynamic frameworks for iOS and macOS

Version 0.6
- Update public API
- Update documentation
- Use modern Objective-C
- Annotate nullability
- Improve PGPKey in the way that the single key consists of two partial keys. (#44)
- Improve support for private and public key in the single file (#44, #49)
- Calculate incremental S2K hash to reduce memory overhead (#49)
- Support for gnu-dummy S2K (#53)
- Fixes buffer overrun in RSA
- Build Static Frameworks for iOS and macOS
- Assume that by convention, the top-level key provides signature services
- Drop external openssl dependency.

Version 0.5
- Improve BZip2 compression
- Fix exporting keys
- Fix decryption for some RSA keys
- minor improvements and fixes
- Extend library with One-Pass encryption
- Removed newline transformation in PGPLiteralPacket
- Partial Packet Length Support
- ZIP compression support
- Signature Verification: find the correct key by the issuerKeyID
- Harden Signature verification
- Support integrity protected status 

Version 0.4.2
- Fix length header for some double-octet length

Version 0.4.0
- ObjectivePGP goes Open Source

Version 0.3.2
- CHANGE error handling for sign/verify methods
- FIX disable check for signing key while it can be public to verify.

Version 0.3.1

- NEW multiple keys for single encryption
- NEW error codes PGPErrorPassphraseRequired, PGPErrorPassphraseInvalid
- CHANGE export armored data with \n instead \r\n
- FIX decrypt message using key encrypted with password
- FIX handling armored data regarding newline

Version 0.3

- NEW encrypt for multiple recipients at once
- NEW decrypt with multiple recipients
- NEW read key from file without importing to keyring
- NEW import keys with or without duplicates
- NEW Support for V3 of signature packets
- NEW armv7s binary added
- IMPROVED overall error handling
- IMPROVED preferred key algorithm chooser
- FIX handle DSA keys for encryption
- FIX self certificate validation check