@@ -11,6 +11,6 @@ guard let key = pgp.findKey(forIdentifier: "878ECFB866753341") else { fatalError
 
 // Encrypt 5 bytes using selected key
 let encryptedArmoredData = try! pgp.encryptData(Data(bytes: [1,2,3,4,5]), using: [key], armored: true)
-if let encryptedAscii = String(data: encryptedArmoredData, encoding: .utf8) {
-    print(encryptedAscii)
-}
+let encryptedAscii = String(data: encryptedArmoredData, encoding: .utf8)
+
+print(encryptedAscii ?? "Missing")
