@@ -2,6 +2,9 @@
 <Workspace
    version = "1.0">
    <FileRef
+      location = "group:ObjectivePGP.playground">
+   </FileRef>
+   <FileRef
       location = "group:ObjectivePGP.xcodeproj">
    </FileRef>
    <FileRef
